--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,28 +2,22 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Muhammad Danish
     - name: Languages
-      value: English, German
+      value: English, Urdu, Pashto
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: MS Computer Science
+      institution: University of New Mexico, Albuquerque, NM, USA
+      year: 2025-2026
       description:
         - Description 1.
         - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+    - title: BSc Computer Science
+      institution: University of New Mexico, Albuquerque, NM, USA
+      year: 2021-2025
       description:
         - Description 1.
         - Description 2.
