--- a/_config.yml
+++ b/_config.yml
@@ -266,7 +266,7 @@ scholar:
   last_name: [Danish]
   first_name: [Muhammad]
 
-  style: mla
+  style: apa
   locale: en
 
   source: /_bibliography/
