--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,7 @@
+"anwar":
+  - firstname: ["Afsah", "A.", "Afsah Anwar"]
+    url: https://afsah.org
+
 "acharya":
   - firstname: ["Bhupendra", "B.", "Bhupendra Acharya"]
     url: https://www.bhupendraacharya.com
